# Lampray

./: .gitmodules  CMakeLists.txt  build.sh  main.cpp
Lampray/Base/: lampBase.h
Lampray/Control/: lampConfig.cpp  lampControl.h  lampNotification.h
Lampray/Filesystem/: lampExtract.cpp  lampIO.cpp  lampShare.cpp  lampUpdate.cpp
Lampray/Menu/: lampCustomise.h  lampMenu.h
Lampray/Parse/: lampParse.h
game-data/BG3/: BG3.cpp
